assert objects tweak